--- a/public/views/students.html
+++ b/public/views/students.html
@@ -5,7 +5,7 @@
     </ol>
 
 </div>
-<div class="row ">
+<div class="row " ng-init="stdInit()">
     <div class="col-lg-12">
         <h4> Students Management</h4>
         <div class="under">
