init was added in the teacher controller

--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -5,7 +5,7 @@
     </ol>
 
 </div>
-<div class="row ">
+<div class="row " ng-init="teachInit()">
     <div class="col-lg-12">
         <h4> Teachers Management</h4>
         <div class="under">
