--- a/public/views/students.html
+++ b/public/views/students.html
@@ -11,8 +11,8 @@
         <div class="under">
 
             <!-- Button trigger modal -->
-            <button class="btn btn-success btn-xs" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
-                New Student
+            <button class="btn btn-xs btn-success btn-green" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
+                 New Student
             </button>
 
             <!-- Modal -->
@@ -297,7 +297,7 @@
                                 <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
 
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-warning btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
+                                <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
                                     Payment
                                 </button>
                                 <!-- Modal -->
