student view search is funcitioning now

--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -396,7 +396,7 @@ body.nav-md .container.body .right_col {
 }
 
 body {
-    color: #73879C;
+    color: #5e7388;
     background: #2A3F54;
     /*#ECF0F1; #FCFCFC*/
     /*font-family: 'Roboto', sans-serif;*/
