--- a/public/views/students.html
+++ b/public/views/students.html
@@ -261,7 +261,7 @@
             <div class="x_title clearfix">
 
                 <div class="pull-left"> <h5>Registered Students ({{Students.length}})</h5> </div>
-                <input class="form-control pull-right" data-ng-model="query" type="text" class="form-control empty" id="iconified" placeholder="&#xF002; Search.." style="width: 180px;height: 30px;font-family:Arial, FontAwesome">
+                <input class="form-control pull-right" data-ng-model="query" type="text" class="form-control empty" id="iconified" placeholder="&#xF002; Search.." style="width: 180px;height: 30px;font-family:Roboto, FontAwesome">
 
             </div>
             <div class="x_content">
@@ -280,7 +280,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr class="repeat-animation" data-ng-repeat="student in Students track by $index">
+                        <tr class="repeat-animation" data-ng-repeat="student in Students | filter:query">
                             <td>{{student.ID}}</td>
                             <td>{{student.name}}</td>
                             <td>{{student.gender}}</td>
