--- a/public/views/pages/login.html
+++ b/public/views/pages/login.html
@@ -6,14 +6,18 @@
 
                 <form name="form" role="form">
                     <h1>Login Form</h1>
-                    <div>
+                    <div class="form-group">
                         <input type="text" name="username" id="username" data-ng-model="username" class="form-control" placeholder="Username" required="" />
+                        <span style="color: red;" ng-show="form.username.$dirty && form.username.$error.required" class="help-block">*Username is required</span>
+
                     </div>
-                    <div>
+                    <div class="form-group">
                         <input type="password" name="password" id="password" data-ng-model="password" class="form-control" placeholder="Password" required="" />
+                        <span style="color: red;" ng-show="form.password.$dirty && form.password.$error.required" class="help-block">*Password is required</span>
+
                     </div>
                     <div>
-                        <a class="btn btn-default submit" ng-click="login()" >Log in</a>
+                        <a class="btn btn-default submit" ng-disabled="form.$invalid" ng-click="login()" >Log in</a>
 
                     </div>
 
