--- a/public/views/pages/login.html
+++ b/public/views/pages/login.html
@@ -4,8 +4,9 @@
 
             <div class="login_content">
 
-                <form name="form" role="form">
+                <form name="form" ng-submit="login()" role="form">
                     <h1>Login Form</h1>
+                    <div ng-show="error" class="alert alert-danger">{{error}}</div>
                     <div class="form-group">
                         <input type="text" name="username" id="username" data-ng-model="username" class="form-control" placeholder="Username" required="" />
                         <span style="color: red;" ng-show="form.username.$dirty && form.username.$error.required" class="help-block">*Username is required</span>
@@ -16,8 +17,9 @@
                         <span style="color: red;" ng-show="form.password.$dirty && form.password.$error.required" class="help-block">*Password is required</span>
 
                     </div>
-                    <div>
-                        <a class="btn btn-default submit" ng-disabled="form.$invalid" ng-click="login()" >Log in</a>
+
+                    <div class="form-actions">
+                        <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-success btn-green">Login</button>
 
                     </div>
 
