--- a/public/views/students.html
+++ b/public/views/students.html
@@ -135,10 +135,10 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Address </label>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Address* </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input class="form-control pull-right"
-                                                   data-ng-model="address" type="text" placeholder="Address">
+                                                   data-ng-model="address" type="text" placeholder="Address" required>
                                         </div>
                                     </div>
 
@@ -237,8 +237,13 @@
 
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
                                             <button class="btn btn-success" type="button"
-                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup"
-                                                    onclick="resetForm1()" data-ng-click=" addStudent(); addParent();" data-dismiss="modal"> Add Student</button>
+                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup || !address"
+                                                    onclick="new PNotify({
+                                                                title: 'Successfull',
+                                                                text: 'Data was added',
+                                                                type: 'success'
+                                                            });resetForm1();"
+                                                    data-ng-click=" addStudent(); addParent();" data-dismiss="modal"> Add Student</button>
                                         </div>
                                     </div>
 
