--- a/public/views/courses.html
+++ b/public/views/courses.html
@@ -87,7 +87,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
 
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
-                                            <button class="btn btn-success" type="button"
+                                            <button class="btn btn-success btn-green" type="button"
                                                     data-ng-disabled="!sID || !fullname || !teacherID || !tsID"
                                                     onclick="resetForm1()" data-ng-click=" addCourse();" data-dismiss="modal"> Add Course</button>
                                         </div>
