--- a/public/views/students.html
+++ b/public/views/students.html
@@ -236,7 +236,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
 
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
-                                            <button class="btn btn-success" type="button"
+                                            <button class="btn btn-success btn-green" type="button"
                                                     data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup || !address"
                                                     onclick="new PNotify({
                                                                 title: 'Successfull',
