--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -135,7 +135,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
 
                                             <button data-dismiss="modal" onclick="resetForm1()" class="btn btn-default" >Close</button>
-                                            <button class="btn btn-success" type="button"
+                                            <button class="btn btn-success btn-green" type="button"
                                                     data-ng-disabled="!tID || !name || !nic "
                                                     onclick="resetForm1()" data-ng-click=" addTeacher();" data-dismiss="modal"> Add Teacher</button>
                                         </div>
