--- a/public/views/instruments.html
+++ b/public/views/instruments.html
@@ -33,18 +33,18 @@
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" id="ID"  data-ng-model="insID" name="insID"
-                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="7" data-minlength="7" maxlength="7"
+                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="4" data-minlength="4" maxlength="4"
                                                    class="form-control col-md-7 col-xs-12">
 
                                             <span style="color:red" ng-show="form.insID.$error.integer"> *should be a number</span>
                                             <span style="color:red" ng-show="form.insID.$touched && form.insID.$invalid">
                                             <span ng-show="form.insID.$error.required">*ID is required.</span>
                                             </span>
-                                            <span style="color:red" ng-show="form.insID.$error.minlength"> *should be 7 digits</span>
+                                            <span style="color:red" ng-show="form.insID.$error.minlength"> *should be 4 digits</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fullname">Full Name <span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fullname">Instrument Name <span class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input type="text" data-ng-model="insname" id="fullname" name="fullname" required class="form-control col-md-7 col-xs-12">
@@ -99,7 +99,7 @@
                         </thead>
                         <tbody>
                         <tr class="repeat-animation" data-ng-repeat="instrument in Instruments | filter:query">
-                            <td>{{instrument.teacher_ID}}</td>
+                            <td>{{instrument.instrument_ID}}</td>
                             <td>{{instrument.name}}</td>
                             <td>{{instrument.gender}}</td>
 
